--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "reveal.js": "^5.0.2"
   },
   "devDependencies": {
+    "@remotion/cli": "^4.0.77",
+    "@remotion/player": "^4.0.77",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
