--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/rollup": "^3.0.0",
     "@preact/signals-react": "^1.3.6",
     "highlight.js": "^11.9.0",
+    "katex": "^0.16.9",
     "matter-js": "^0.19.0",
     "prism-js": "^1.0.0",
     "react": "^18.2.0",
