--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-monaco-editor": "^0.55.0",
     "react-router-dom": "^6.15.0",
     "reveal.js": "^5.0.2"
   },
