--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/react": "^3.0.0",
     "@mdx-js/rollup": "^3.0.0",
+    "@monaco-editor/react": "^4.6.0",
     "@preact/signals-react": "^1.3.6",
     "hexy": "^0.3.5",
     "highlight.js": "^11.9.0",
